# TestFullStack-VuePython

./: .env.dev  .gitignore  README.md  docker-compose.yml  entrypoint.sh  start_dev.sh
backend/: .env.dev  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3bdabe91daae_remove_updated_at_column.py  6d57981f2702_modify_models.py  978a646e1603_.py  cf5e763d2877_redefine_campaign_models.py
backend/environment/: .compose.env  .compose.env.dev
backend/src/: main.py  swagger_definitions.py
backend/src/campaigns/: database.py  models.py  routes.py  schemas.py  services.py
backend/src/core/: database.py
backend/src/hello_world/: data.py  routes.py
backend/src/relations/: user_campaign.py
backend/src/users/: models.py  routes.py  schemas.py  services.py
backend/tests/unit/: test_campaign_service.py  test_user_service.py
conception/: Conception.md
frontend/: .eslintrc  .prettierrc.json  README.md  package-lock.json  package.json  uno.config.js  vite.config.mjs
frontend/cypress/e2e/: auth_errors.cy.js  auth_flow.cy.js
frontend/cypress/support/: commands.js
frontend/src/: App.vue  main.js
frontend/src/api/: campaigns.js  client.js
frontend/src/components/: CampaignCard.vue
frontend/src/composables/: useCampaigns.js
frontend/src/pages/: AuthPage.vue  DashboardPage.vue  index.vue
frontend/src/plugins/: axios.js  vuetify.js
frontend/src/router/: index.js
frontend/src/stores/: authStore.js  campaignStore.js
