[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Stephen Woirin <s.woirin.dev@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
aiomysql = "^0.2.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"